--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -43,9 +43,13 @@ my_age <- "我的年紀"
 ```
 
 ```{r}
-`我的年紀` <- 20
+'我的年紀' <- 20
 my_age <- "我的年紀"
 ```
+
+```{r}
+```
+
 
 ```{r}
 vNum1 <- c(-1,5)
@@ -95,7 +99,22 @@ sum(logil)
 
 
 
+```{r}
+my_108_total_credits <- 15
 
+
+my.108.total_credits <- 15
+.my.108.total_credits <- 15
+'我的108學年總學分數'<- 15 # 特殊名稱處理，`不是名稱的一部份
+`.108.total_credits` <- 15
+```
+
+```{r}
+vNum1 <- c(-1,5)
+vNum2 <- c(2,3)
+vNum4 <- c() # 空向量
+
+```
 
 
 
