--- a/20200325.Rmd
+++ b/20200325.Rmd
@@ -52,6 +52,42 @@ class(studentId)
 ```{r}
 library(lubridate)
 ```
+2020-03-18 13:52:40
+```{r}
+tpeTime <- ymd_hms("2020-03-18 13:52:40",
+        tz="Asia/Taipei ") #TIME ZONE
+class(tpeTime)
+typeof(tpeTime)
+as.double(tpeTime)
+with_tz(tpeTime,tzone = "UTC")
+```
+Mar.18, 2020, 05:52:40
+```{r}
+pgTime <- mdy_hms("Mar.18, 2020, 05:52:40",
+                  tz="Europe/Lisbon")
+class(pgTime)
+typeof(pgTime)
+as.double(pgTime)
+with_tz(pgTime,tzone = "UTC")
+```
+```{r}
+
+studenttime <- c(
+  ymd_hms("2020-03-04T06:56:29Z"),
+  ymd_hms(
+  c("2020-03-11 14:16:43","2020-03-11 14:34:33"),tz="Asia/Taipei")
+)
+```
+
+```{r}
+tudentTime <- c(ymd_hms("2020-03-04T08:15:28Z"),
+                 ymd_hms("2020-03-11 16:11:43",tz="Asia/Taipei"),
+                 ymd_hms("2020-03-11 16:11:43",tz="Asia/Taipei"))
+```
+
+
+
+
 
 ## R Markdown
 
