--- a/0401.Rmd
+++ b/0401.Rmd
@@ -145,3 +145,29 @@ temperature=list(  hot=c(25),low=c(18)
 
 ```
 
+```{r}
+library(lubridate)
+```
+```{r}
+browseURL("https://docs.google.com/spreadsheets/d/1EAG49qDKPWWi0ebkVr29TLrvVnoBPfkvxYY-J3xLAHY/edit#gid=458686645")
+```
+```{r}
+`tr`= list(  totalCommits=c(3),   firstCommit=c(2020-03-11 14:16:43,))
+```
+
+```{r}
+library(lubridate)
+tp<- ymd_hms("2020-03-18 13:52:40",
+        tz="UTC")
+la      <- mdy_hms("Mar.18, 2020, 05:52:40",tz="UTC")
+print(tp)
+print(la)
+```
+
+
+```{r}
+with_tz(tp,tzone = "UTC")
+print(tp)
+```
+
+
