--- a/bh.Rmd
+++ b/bh.Rmd
@@ -27,7 +27,7 @@ fromJSON("https://data.tainan.gov.tw/dataset/4cd9345a-04bf-4328-a97d-314ff78b476
 listExample <- 
   list(
     student="小明",
-    `學期` = list(
+    `學期` <- list(
       `108-1`=list(
         list(
           name="個體經濟學",
@@ -44,27 +44,13 @@ listExample <-
       )
     )
   )
-listExample[c(1,2),]
-
+length(`學期`
+       )
+`學期`[[1]]
 ```
 
 ```{r}
-fromJSON("http://data.ntpc.gov.tw/api/v1/rest/datastore/382000000A-000157-002",
-         simplifyDataFrame = F) -> newTaipeiCityVaccin
-```
-
-```{r}
-str( newTaipeiCityVaccine$success,max.level = 2)
-str()
-
-
-```
-
-
-
-
-```{r}
-( newTaipeiCityVaccine)
+length(tainanSportsMap)
 ```
 
 ```{r}
