--- a/bh.Rmd
+++ b/bh.Rmd
@@ -20,6 +20,12 @@ vectorexample[[1]]
 library(jsonlite)
 fromJSON("https://data.tainan.gov.tw/dataset/4cd9345a-04bf-4328-a97d-314ff78b4763/resource/afc025fc-1ef4-447c-b785-a680391d0ca1/download/tnsport2.json", simplifyDataFrame = F) -> tainanSportsMap
 ```
+```{r}
+str(tainanSportsMx.level = 1)
+str(tainanSportsMap[c(
+  
+)])
+```
 
  
 
@@ -27,7 +33,7 @@ fromJSON("https://data.tainan.gov.tw/dataset/4cd9345a-04bf-4328-a97d-314ff78b476
 listExample <- 
   list(
     student="小明",
-    `學期` <- list(
+    `學期` = list(
       `108-1`=list(
         list(
           name="個體經濟學",
@@ -44,16 +50,34 @@ listExample <-
       )
     )
   )
-length(`學期`
-       )
-`學期`[[1]]
+str(listExample,max.level = 1)
+listExample[c(2,1)]
+listExample[c('學期','student')]
 ```
 
 ```{r}
-length(tainanSportsMap)
+fromJSON("http://data.ntpc.gov.tw/api/v1/rest/datastore/382000000A-000157-002",
+         simplifyDataFrame = F) -> newTaipeiCityVaccin
 ```
 
 ```{r}
-browser(https://drive.google.com/file/d/1gdR0027DoqSn2V4OBDPC7Hm0PD-fsXZk/view)
+str( newTaipeiCityVaccine$success,max.level = 2)
+str()
+
+
+```
+```{r}
+fromJSON("https://www.dropbox.com/s/qnm9bnz7vccrvcz/taipeiNightMarkets.json?dl=1", simplifyDataFrame = F) -> taipeiNightMarkets
+```
+
+
+
+
+```{r}
+( newTaipeiCityVaccine)
+```
+
+```{r}
+fromJSON("https://www.dropbox.com/s/qnm9bnz7vccrvcz/taipeiNightMarkets.json?dl=1", simplifyDataFrame = F) -> taipeiNightMarkets
 ```
 
