--- a/bh.Rmd
+++ b/bh.Rmd
@@ -8,26 +8,45 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
+library(jsonlite) # 不少同學這行會有Error，還記得如何排除嗎？
+toJSON(commit)
 ## R Markdown
-
 ```{r}
-vectorexample <- c('a','s','d')
-str(vectorexample)
-vectorexample[[1]]
-```
-```{r}
-library(jsonlite)
-fromJSON("https://data.tainan.gov.tw/dataset/4cd9345a-04bf-4328-a97d-314ff78b4763/resource/afc025fc-1ef4-447c-b785-a680391d0ca1/download/tnsport2.json", simplifyDataFrame = F) -> tainanSportsMap
-```
-```{r}
-str(tainanSportsMx.level = 1)
-str(tainanSportsMap[c(
-  
-)])
+fromJSON("https://www.dropbox.com/s/qnm9bnz7vccrvcz/taipeiNightMarkets.json?dl=1", simplifyDataFrame = F) -> taipeiNightMarkets
 ```
 
- 
+```{r}
+library(jsonlite) # 不少同學這行會有Error，還記得如何排除嗎？
+toJSON(commit)
+```
+```{r}
+fromJSON("http://data.ntpc.gov.tw/api/v1/rest/datastore/382000000A-000157-002",
+         simplifyDataFrame = F) -> newTaipeiCityVaccine
+```
+```{r}
+fromJSON("https://www.dropbox.com/s/qnm9bnz7vccrvcz/taipeiNightMarkets.json?dl=1", simplifyDataFrame = F) -> taipeiNightMarkets
+```
+
+```{r}
+str(taipeiNightMarkets, max.level=1)
+str(taipeiNightMarkets[[1]])
+str(taipeiNightMarkets$"華西街觀光夜市")
+str(taipeiNightMarkets[c(2,1)])
+str(taipeiNightMarkets[c(' 西昌街觀光夜市','饒河街觀光夜市')])
+```
+```{r}
+str(taipeiNightMarkets, max.level=1)
+str(taipeiNightMarkets[c(T,F,F,F,T,F,F,F,F,F,F,F,F,T)])
+```
+```{r}
+rep(c(F,14)) -> taipeiNightMarkets
+print(taipeiNightMarkets)
+taipeiNightMarkets[c(1,3,5)] <- TRUE
+print(taipeiNightMarkets)
+```
+
+
+
 
 ```{r}
 listExample <- 
@@ -51,33 +70,22 @@ listExample <-
     )
   )
 str(listExample,max.level = 1)
-listExample[c(2,1)]
-listExample[c('學期','student')]
-```
-
-```{r}
-fromJSON("http://data.ntpc.gov.tw/api/v1/rest/datastore/382000000A-000157-002",
-         simplifyDataFrame = F) -> newTaipeiCityVaccin
-```
-
-```{r}
-str( newTaipeiCityVaccine$success,max.level = 2)
-str()
-
-
+listExample[c(T,F)]
 ```
 ```{r}
-fromJSON("https://www.dropbox.com/s/qnm9bnz7vccrvcz/taipeiNightMarkets.json?dl=1", simplifyDataFrame = F) -> taipeiNightMarkets
+get <- listExample[['學期']]
+str(get,max.level = 3)
 ```
-
-
-
-
 ```{r}
-( newTaipeiCityVaccine)
+get1 <- listExample['學期']
+str(get1,max.level = 3)
 ```
-
 ```{r}
-fromJSON("https://www.dropbox.com/s/qnm9bnz7vccrvcz/taipeiNightMarkets.json?dl=1", simplifyDataFrame = F) -> taipeiNightMarkets
+numVector <- c(2,3,6,-1,4,2,6)
+select1 <- numVector[c(1,4)]; select1
+select2 <- select1[[1]]; select2
+
+# 相當於
+numVector[c(1,4)][[1]]
 ```
 
