--- a/20200415.Rmd
+++ b/20200415.Rmd
@@ -33,13 +33,34 @@ tomorrow <- list(
   list("新北市",c(highest_temp = 24),c(lowest_temp = 15)))
 
 weather <- list(today,tomorrow)
-
-print(weather)
+str(weather)
+'最高溫' <- weather$today[[2]][[1]]
 ```
 
 ```{r}
 yer <- list(  c(x=2,y=3),c(h=4,j=5))
 str(yer)
+yer[[1]]
+```
+
+```{r}
+a <- c("1","b","TRUE")
+a[[2]] <- "c" # 元素存在: 替換
+a[[4]] <- "7" # 元素不存在： 增加
+a[c(5,6)] <- c("J", "K")
+a[c(11,22)] <- c(3,4)
+a
+```
+```{r}
+library(lubridate)
+list1 <- 
+  list(
+    list(
+      name="Jack",
+      birthday=ymd("1998-03-21"),
+      status=c(height=177, weight=80)
+    )
+'list1'[[1]][[1]] 
 
 ```
 
