--- a/0604.Rmd
+++ b/0604.Rmd
@@ -185,4 +185,40 @@ jsonlite::fromJSON("https://data.taipei/api/getDatasetInfo/downloadResource?id=7
 jsonlite::fromJSON("https://data.taipei/api/getDatasetInfo/downloadResource?id=48aa5bca-2a4f-4fb7-a658-43cba51d5d56&rid=dfd68d8e-d3b9-44df-b614-8850c103239f") -> stop
 
 ```
+```{r}
+library(lubridate)
+what_time_it_is <- function(time){
+  now_paris <- with_tz(now(),tzone = "Europe/Paris")
+  return(now_paris)
+}
+what_time_it_is("Europe/Paris")
+```
+```{r}
+library(purrr)
+
+map(estimatedArrivalTime_916,~.x$RouteName$Zh_tw) %>%
+  unlist(.) %>%
+  as.character(.) -> route1
+
+map(route_916,~.x$RouteName$Zh_tw) %>%
+  unlist(.)%>%
+  as.character(.) -> route2
+
+both_route <- route1|route2
+
+map(estimatedArrivalTime_916,~.x$StopName$Zh_tw)%>%
+  unlist(.)%>%
+  as.character(.) -> stop1
+
+arrive_time <- map(estimatedArrivalTime_916,~.x$SrcUpdateTime)
+
+
+when_busArrives <-
+  function(route,stop){
+    arrivetime <-arrive_time
+  return(arrivetime)
+  }
+when_busArrives("916","臺北大學正門")
+when_busArrives("939","學勤路")
+```
 
